fixed issue with navbar on mobile, added agency.js to keep track of the page the user is on in the navbar

--- a/Errol_Roman/css/bootstrap.css
+++ b/Errol_Roman/css/bootstrap.css
@@ -195,6 +195,7 @@ th {
   a,
   a:visited {
     text-decoration: underline;
+    color:blue;
   }
   a[href]:after {
     content: " (" attr(href) ")";
@@ -497,6 +498,7 @@ cite {
 }
 .text-justify {
   text-align: justify;
+  word-spacing: 0.5em;
 }
 .text-muted {
   color: #b4bcc2;
@@ -3797,6 +3799,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     background-color: transparent;
     border: 0;
     box-shadow: none;
+
   }
   .navbar-nav .open .dropdown-menu > li > a,
   .navbar-nav .open .dropdown-menu .dropdown-header {
@@ -3814,6 +3817,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-nav {
     float: left;
     margin: 0;
+
   }
   .navbar-nav > li {
     float: left;
@@ -3896,6 +3900,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     -webkit-box-shadow: none;
     box-shadow: none;
   }
+
+
   .navbar-form.navbar-right:last-child {
     margin-right: -15px;
   }
@@ -3947,6 +3953,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #18bc9c;
   background-color: transparent;
 }
+
 .navbar-default .navbar-text {
   color: #777777;
 }
@@ -3958,7 +3965,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #18bc9c;
   background-color: transparent;
 }
-.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a
+{
+  color: #18bc9c; /* edit color of navbar active link */
+}
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #ffffff;
@@ -3999,7 +4009,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     color: #18bc9c;
     background-color: transparent;
   }
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a
+  {
+    color: #18bc9c;
+  }
+
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #ffffff;
@@ -4013,7 +4027,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default .navbar-link {
-  color: #ffffff;
+  color: #64fe22;
 }
 .navbar-default .navbar-link:hover {
   color: #18bc9c;
@@ -4025,6 +4039,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-inverse .navbar-brand {
   color: #ffffff;
 }
+
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
   color: #2c3e50;
